--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ember-cli-fill-murray",
-  "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "name": "ember-cli-fill-murray-raksonibs",
+  "version": "0.1.0",
+  "description": "Check it yo.",
   "directories": {
     "doc": "doc",
     "test": "tests"
